Fix Overflow Scrolling in Safari

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -114,6 +114,7 @@ html, body
   margin: 0
   padding: 0
   overflow-x: hidden
+  -webkit-overflow-scrolling: touch
 
 /* Use larger heading sizes on pages with no sidebars */
 body.page-template-no_sidebars, article#post-21
@@ -580,6 +581,7 @@ body.single-post
   height: 1px
   width: 1px
   overflow: hidden
+  -webkit-overflow-scrolling: touch
 
 
 
@@ -866,6 +868,7 @@ body.woocommerce-page article#post-21
       display: flex
       flex-wrap: nowrap
       overflow-x: auto
+      -webkit-overflow-scrolling: touch
       justify-content: flex-start !important
   #store-home-types
     margin-top: 3.25rem
@@ -1262,6 +1265,7 @@ body.single-directory
     /* Hide Overflowing Text in Status Card */
     .listing-status
       overflow-x: hidden
+      -webkit-overflow-scrolling: touch
     /* Fix Height of Google Map */
     s-google-map
       height: 350px
@@ -1370,6 +1374,7 @@ body.single-directory
     height: 17em
     overflow-y: scroll
     overflow-x: hidden
+    -webkit-overflow-scrolling: touch
   /* Style the Submit Buttons */
   .frm_final_submit
     @extend .btn
